--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,3 +38,4 @@ androidx-work-testing = { group = "androidx.work", name = "work-testing", versio
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-parcelize = { id = "kotlin-parcelize" }
